# L1TGCEvaluation

./: CMakeLists.txt  README.md
L1tgcevaluation/: HistogramManager.h  RoIObj.h  TGCNumbering.h  TGCRPhiCoincidenceMap.h  TrigT1TGCNtuple.h  physics.h
share/: RoIpos_Endcap.db  RoIpos_Endcap.dp  RoIpos_Forward.db  RoIpos_Forward.dp
src/: CMakeLists.txt  HistogramManager.C  RoIObj.C  TGCCoinData.cxx  TGCRPhiCoincidenceMap.cxx  TrigT1TGCNtuple.C  main.cxx  physics.C
